[package]
name = "electricity"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.28"
influxdb2_client = { git = "https://github.com/influxdata/influxdb_iox.git", rev = "866f9cefa1386f2c4ef1a07aadecb074f6c7835d" }
modbus = "1.0.5"
once_cell = "1.18.0"
regex = "1.9.3"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
